--- a/style.css
+++ b/style.css
@@ -5,8 +5,19 @@
     font-family: 'Roboto', sans-serif;
 }
 #navbar{
-    background-color: #f0cf15;
+    background-color: #f0cf15; 
     padding-left: 50px;
+}
+@media screen and (max-width: 1195px)  {
+    .icons{
+        display: none;
+    }
+    #navbar{
+        margin-left: -30px;
+    }
+    .content{
+        margin-left: -30px;
+    }
 }
 #logo{
     color: black;
